--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="icon" type="image/x-icon" href="se.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>gitSearch</title>
+<title>GitSearch</title>
 <center>
 <div class="logo" dir="ltr">
 <img src="logo.png"/></div>
