--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="icon" type="image/x-icon" href="se.ico">
+<link rel="icon" type="image/x-icon" href="ser.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>GitSearch</title>
 <center>
