--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
+<!DOCTYPE html>
+
 <link rel="icon" type="image/x-icon" href="seri.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
-<title>GitSearch</title>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  </head>
+  <body>
+  <title>GitSearch</title>
 <center>
 <div class="logo" dir="ltr">
 <img src="logo.png"/></div>
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
 </center>
+
+
+
+
+      </span>
+    </div>
+
+    <footer>
+      <div class="footer-container">
+        <div class="left-col">
+          <img src="logo2.png" alt="" class="logo">
+          <div class="social-media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+          <p class="rights-text">© 2023 Created By <b>GitSearch</b>  All Rights Reserved.</p>
+        </div>
+
+        <div class="right-col">
+          <h1>Your Search, Your Git</h1>
+          <div class="border"></div>
+          <p>A Search Engine Made For Developers.</p>
+          
+          </form>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
