--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>GitSearch</title>
 <center>
 <div class="logo" dir="ltr">
-<img src="logo.png"/></div>
+<img src="logo2.png"/></div>
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
 </center>
