--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title>GitSearch</title>
 <center>
-<div class="logo" dir="ltr">
+<div class="logo2" dir="ltr">
 <img src="logo2.png"/></div>
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
