--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <title>GitSearch</title>
 <center>
+  <div class="logo1" dir="ltr">
+<img src="seri.ico"/></div>
 <div class="logo2" dir="ltr">
 <img src="logo2.png"/></div>
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
