--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>GitSearch</title>
 <center>
 <div class="logo2" dir="ltr">
-<img src="logo.png"/></div>
+<img src="logo.png" 
+     width="400" 
+     height="500" />
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
 </center>
