--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <center>
 <div class="logo2" dir="ltr">
 <img src="logo.png" 
-     width="150" 
-     height="500" />
+     width="150px" 
+     height="500px" />
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
 </center>
