--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <img src="logo.png" 
      width="505" 
      height="260" />
+    
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
 </center>
+  
+  <div class="text" dir="ltr">
+    <h3>Created By <b>Ryan T</b> ⓒAll Rights Reversed</h3>
+  </div>
 
 
 
