--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </script></div>
 </center>
   
-  <div class="text" dir="ltr">
-    <h3>Created By <b>Ryan T</b> ⓒAll Rights Reversed</h3>
-  </div>
+  <div class="logo3" dir="ltr">
+    <img src="https://fontmeme.com/temporary/3dba7815ad5cd5ce8254092731b61363.png" />
 
 
 
