--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </script></div>
   
   <div class="logo3" dir="ltr">
-    <img src="https://fontmeme.com/temporary/3dba7815ad5cd5ce8254092731b61363.png" />
+    <font face="Arial">
+Made By <b>ITD Developers</b>, All Rights Reversed<br> 
+</font>
     
     </center>
 
