--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <div class="logo3" dir="ltr">
     <font face="Arial">
-Made By <b>ITD Developers</b>, All Rights Reversed<br> 
+<b>GitSearch 2022</b>, All Rights Reversed<br> 
 </font>
     
     </center>
