--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 
 <!DOCTYPE html>
 
+  <title>About</title>
+  
 <link rel="icon" type="image/x-icon" href="seri.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
 <html lang="en" dir="ltr">
@@ -146,9 +148,9 @@ body {
       <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>John Doe</h1> 
-      <p>Architect & Engineer</p> 
-      <p>We love that guy</p>
+      <h1>Ryan Thanasingh</h1> 
+      <p>Creator & Founder Of GitSearch</p> 
+      <p>Also The Creator Of Enlearn Learning Platform.</p>
       
     </div>
   </div>
