--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<link rel="icon" type="image/x-icon" href="seri.ico">
+<link rel="icon" type="image/x-icon" href="serii.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
 <html lang="en" dir="ltr">
   
