--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@ function closeNav() {
 </script></div>
   
   <div class="logo3" dir="ltr">
-    <font face="Arial">
-<b>GitSearch 2022</b>, All Rights Reserved<br> 
-</font>
+    <img src="tempo.png"/>
     
     </center>
 
