--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@ function closeNav() {
 </script></div>
   
   <div class="logo3" dir="ltr">
-    <img src="tempo.png"/>
+    <img src="tempo.png" 
+     width="105" 
+     height="60" />
     
     </center>
-*/How*/
+
 
 
 
