--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ function closeNav() {
      width="170" 
      height="13" />
     
+   <div class="logo3" dir="ltr">
+     <img src="idk.png"/>
+    
     </center>
 
 
