--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function closeNav() {
      height="13" />
     
    <div class="logo3" dir="ltr">
-     <img src="idk.png"/>
+     <img src="idk.PNG"/>
     
     </center>
 
