--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ function closeNav() {
      
      <div class="logo8" dir="ltr">
      <img src="about.png"
-          width="805" 
-          height="115" />
+          width="1355" 
+          height="900px" />
     
     </center>
 
