--- a/about.html
+++ b/about.html
@@ -3,8 +3,9 @@
 <!DOCTYPE html>
 
   <title>About</title>
-  
-<link rel="icon" type="image/x-icon" href="seri.ico">
+
+
+ <link rel="icon" type="image/x-icon" href="serii.ico"> 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <html lang="en" dir="ltr">
   
