--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#"><b>GitSearch 2022®</b></a>
+  <a href="#"><b>GitSearch 2022</b></a>
   <a href="index.html">Search</a>
   <a href="#">Donate</a>
   <a href="about.html">About</a>
