--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body {
   <a href="#"><b>GitSearch 2022</b></a>
   <a href="index.html">Search</a>
   <a href="#">Donate</a>
+  <a href="maps.html">GitSearch Maps</a>
   <a href="about.html">About</a>
 </div>
 
