--- a/about.html
+++ b/about.html
@@ -66,9 +66,10 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#"><b>GitSearch 2022®</b></a>
+  <a href="#"><b>GitSearch 2022</b></a>
   <a href="index.html">Search</a>
   <a href="#">Donate</a>
+  <a href="maps.html">GitSearch Maps</a>
   <a href="about.html">About</a>
 </div>
 
