--- a/j.html
+++ b/j.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <link rel="icon" type="image/x-icon" href="serii.ico">
 <head>
+  <title>GitTasks</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Center the loader */
