--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ body {
   <a href="index.html">Search</a>
   <a href="#">Donate</a>
   <a href="maps.html">GitSearch Maps</a>
+  <a href="j.html">GitTasks</a>
   <a href="about.html">About</a>
 </div>
 
