--- a/j.html
+++ b/j.html
@@ -261,7 +261,9 @@ function newElement() {
   }
 }
 </script>
-
+<img src="s.png"
+         width="320"
+         height="320"/>
 </body>
 </html>
 
