--- a/j.html
+++ b/j.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel="icon" type="image/x-icon" href="serii.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>GitTasks</title>
 <style>
 /* Center the loader */
 #loader {
