--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body {
   <a href="#">Donate</a>
   <a href="maps.html">GitSearch Maps</a>
   <a href="j.html">GitTasks</a>
+  <a href="word.html">GitWord</a>
   <a href="about.html">About</a>
 </div>
 
