--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="icon" type="image/x-icon" href="serii.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
 <html lang="en" dir="ltr">
+  <body bgcolor="lightgreen" >
   
 <html>
 <head>
