--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@ function closeNav() {
     width: 600px;
 }
       
+      .gsc-input-box {
+    border-radius: 6px;
+}
+      
     </style>
 
 
