--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ function closeNav() {
       
     </style>
 
+     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-54c43feb-0df4-42fd-8fd8-6eafcfb28ae0"></div>
+
 
 
 
