--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ body {
   <a href="j.html">GitTasks</a>
   <a href="word.html">GitWord</a>
   <a href="about.html">About</a>
+  <a href="darkmode.html">Dark Mode</a>
 </div>
 
 <div id="main">
