--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
   <a href="word.html">GitWord</a>
   <a href="about.html">About</a>
   <a href="darkmode.html">Dark Mode</a>
-  <a href="https://gitsearchr.github.io/openstore/apptweak.mobileconfig">Download AppTweak</a>
+  <a href="https://gitsearchr.github.io/apptweak-install">Download AppTweak</a>
 </div>
 
 <div id="main">
