--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function closeNav() {
 <div class="gcse-search"><script async src="https://cse.google.com/cse.js?cx=347a9699805a2489a">
 </script></div>
      
-<img src="postuser.png"/>
+<img src="postuser.png" width="1000px" height="400px">
   
     </center>
     
