--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ function closeNav() {
 </script></div>
      
 <img src="postuser.png" width="1000px" height="400px">
+
+  <img src="beforeuser.png" width="1000px" height="400px">
   
     </center>
     
