--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@ function closeNav() {
       .gsc-input-box {
     border-radius: 20px;
 }
-      
+      .gsc-search-button-v2, .gsc-search-button-v2:hover, .gsc-search-button-v2:focus {
+    border-radius: 20px;
+    height: 31px;
+}
     </style>
 
   
