--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ function closeNav() {
       .gsc-input-box {
     border-radius: 160px;
     height: 45px;
+    width: 575px;
 }
       .gsc-search-button-v2, .gsc-search-button-v2:hover, .gsc-search-button-v2:focus {
     border-radius: 180px;
