--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #f2f2f2;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  font-color: #000;
 }
 
 .sidenav a {
