--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  font-family: "Lato", sans-serif;
+  font-family: Tahoma, sans-serif;
 }
 
 .sidenav {
