--- a/index.html
+++ b/index.html
@@ -65,15 +65,13 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#"><b>GitSearch 2022</b></a>
+  <a href="#"><b>®GitSearch 2023</b></a>
   <a href="index.html">Search</a>
   <a href="#">Donate</a>
-  <a href="maps.html">GitSearch Maps</a>
   <a href="j.html">GitTasks</a>
   <a href="word.html">GitWord</a>
   <a href="about.html">About</a>
   <a href="darkmode.html">Dark Mode</a>
-  <a href="https://gitsearchr.github.io/apptweak-install">Download AppTweak</a>
 </div>
 
 <div id="main">
