--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
   <a href="#">Donate</a>
   <a href="j.html">GitTasks</a>
   <a href="word.html">GitWord</a>
-  <a href="about.html">About</a>
+  <a href="tc.html">Terms & Conditions</a>
   <a href="darkmode.html">Dark Mode</a>
 </div>
 
