--- a/tc.html
+++ b/tc.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #FF5733;
             color: #fff;
             text-align: center;
             padding: 1em;
@@ -37,7 +37,7 @@
         }
 
         footer {
-            background-color: #333;
+            background-color: #FF5733;
             color: #fff;
             text-align: center;
             padding: 1em;
