--- a/ca.html
+++ b/ca.html
@@ -93,3 +93,21 @@
 
 </body>
 </html>
+
+<style>
+footer {
+            background-color: #FF5733;
+            color: #fff;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            font-family: Tahoma, sans-serif;
+        }
+</style>
+
+<footer>
+        <p>&copy; 2023 GitSearch. All Rights Reserved.</p>
+    </footer>
+
