--- a/ca.html
+++ b/ca.html
@@ -96,15 +96,16 @@
 
 <style>
 footer {
-            background-color: #FF5733;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            font-family: Tahoma, sans-serif;
-        }
+    background-color: #FF5733;
+    color: #fff;
+    text-align: center;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-family: Tahoma, sans-serif;
+    right: 0.0001%;
+}
 </style>
 
 <footer>
