--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@ function closeNav() {
 }
     </style>
 
+    <style>
+footer {
+    background-color: #FF5733;
+    color: #fff;
+    text-align: center;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-family: Tahoma, sans-serif;
+    right: 0.0001%;
+}
+</style>
+
+<footer>
+        <p>&copy; 2023 GitSearch. All Rights Reserved.</p>
+    </footer>
+
   
 
      
