--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
   <a href="j.html">GitTasks</a>
   <a href="word.html">GitWord</a>
   <a href="tc.html">Terms & Conditions</a>
-  <a href="ve.html">Version</a>
+  <a href="ver.html">Version</a>
   <a href="ca.html">Creator Ads</a>
 </div>
 
