--- a/set.html
+++ b/set.html
@@ -10,12 +10,12 @@
             font-family: 'Tahoma', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: #FF5733;
             color: #333;
         }
 
         header {
-            background-color: #FFA500;
+            background-color: #FF5733;
             color: #fff;
             text-align: center;
             padding: 1em;
@@ -32,7 +32,7 @@
         }
 
          h2, h3 {
-            color: #ffa500;
+            color: #FF5733;
         }
 
         ol {
@@ -43,7 +43,7 @@
         footer {
             text-align: center;
             padding: 1em;
-            background-color: #FFA500;
+            background-color: #FF5733;
             color: #fff;
         }
     </style>
