--- a/ver.html
+++ b/ver.html
@@ -13,7 +13,7 @@
             color: #fff; /* Light text color */
         }
         h1 {
-            color: #0366d6; /* GitHub's primary color */
+            color: #FF5733; /* GitHub's primary color */
         }
         p {
             max-width: 800px;
@@ -34,8 +34,8 @@
             text-decoration: underline;
         }
         h2 {
-            color: #0366d6;
-            border-bottom: 2px solid #0366d6;
+            color: #FF5733;
+            border-bottom: 2px solid #FF5733;
             padding-bottom: 5px;
             margin-top: 20px;
         }
