--- a/ver.html
+++ b/ver.html
@@ -27,7 +27,7 @@
             margin-bottom: 10px;
         }
         a {
-            color: #0366d6;
+            color: #FF5733;
             text-decoration: none;
         }
         a:hover {
