--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ body {
   <a href="set.html">Set GitSearch as Default</a>
   <a href="ver.html">Version</a>
   <a href="ca.html">Creator Ads</a>
+  <a href="//www.dmca.com/Protection/Status.aspx?ID=c49dd74a-fbae-4f29-890d-3e5b7b70eaa3" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-01.png?ID=c49dd74a-fbae-4f29-890d-3e5b7b70eaa3"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 </div>
 
 <div id="main">
