--- a/tc.html
+++ b/tc.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link rel="icon" type="image/x-icon" href="serii.ico">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,80 +6,59 @@
     <title>Terms and Conditions</title>
     <style>
         body {
-            font-family: Tahoma, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 20px;
+            background-color: #111; /* Dark background color */
+            color: #fff; /* Light text color */
         }
-
-        header {
-            background-color: #FF5733;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
+        h1 {
+            color: #FF5733; /* GitHub's primary color */
         }
-
-        main {
+        p {
             max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            line-height: 1.6;
         }
-
-        section {
-            margin-bottom: 20px;
+        a {
+            color: #FF5733;
+            text-decoration: none;
         }
-
+        a:hover {
+            text-decoration: underline;
+        }
         h2 {
-            color: #333;
-        }
-
-        footer {
-            background-color: #FF5733;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            color: #FF5733;
+            border-bottom: 2px solid #FF5733;
+            padding-bottom: 5px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <h1>Terms and Conditions</h1>
 
-    <header>
-        <h1>Terms and Conditions</h1>
-    </header>
+    <p>Please read these terms and conditions carefully before using GitSearch.</p>
 
-    <main>
-        <section>
-            <h2>1. Acceptance of Terms</h2>
-            <p>By using the GitSearch search engine, you agree to comply with and be bound by the following terms and conditions.</p>
-        </section>
+    <h2>1. Acceptance of Terms</h2>
+    <p>By accessing or using GitSearch, you agree to be bound by these terms and conditions. If you do not agree with any part of these terms, you may not use our services.</p>
 
-        <section>
-            <h2>2. User Obligations</h2>
-            <p>You agree not to misuse the GitSearch service, including but not limited to:</p>
-            <ul>
-                <li>Using the service for any unlawful purpose.</li>
-                <li>Interfering with or disrupting the integrity or performance of GitSearch.</li>
-                <li>Attempting to gain unauthorized access to any part of GitSearch.</li>
-            </ul>
-        </section>
+    <h2>2. Use of GitSearch</h2>
+    <p>GitSearch is provided for usage purposes only. We reserve the right to modify, suspend, or discontinue the service at any time without notice.</p>
 
-        <section>
-            <h2>3. Content and Use of Information</h2>
-            <p>GitSearch may provide search results that include links to third-party websites. We do not endorse or take responsibility for the content on these external sites.</p>
-        </section>
+    <h2>3. User Conduct</h2>
+    <p>You agree not to engage in any activity that may interfere with the proper functioning of GitSearch. This includes but is not limited to unauthorized access, distribution of harmful code, copywriting code, or any other activity that violates applicable laws.</p>
 
-        <!-- Add more sections as needed -->
+    <h2>4. Privacy</h2>
+    <p>Your use of GitSearch is also governed by our <a href="/privacy">Privacy Policy</a>. Please review our Privacy Policy to understand our practices.</p>
 
-    </main>
+    <h2>5. Limitation of Liability</h2>
+    <p>We are not liable for any direct, indirect, incidental, consequential, or punitive damages arising out of your use of GitSearch.</p>
 
-    <footer>
-        <p>&copy; 2023 GitSearch. All Rights Reserved.</p>
-    </footer>
+    <h2>6. Changes to Terms</h2>
+    <p>We reserve the right to update or modify these terms and conditions at any time without prior notice. It is your responsibility to review these terms periodically.</p>
 
+    <h2>7. Contact Information</h2>
+    <p>If you have any questions or concerns about these terms, please <a href="mailto:legal@gitsearch.com">contact us</a>.</p>
+
+    <p>Thank you for using GitSearch!</p>
 </body>
 </html>
