--- a/index.html
+++ b/index.html
@@ -130,6 +130,37 @@ function closeNav() {
 }
     </style>
 
+    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Popup Cookie Consent Box</title>
+    <link rel="stylesheet" href="rn.css" />
+    <!-- Boxicons CSS -->
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
+    <script src="rn.js" defer></script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <i class='bx bxl-gitlab'></i>
+        <h2>Beta Reavamp</h2>
+      </header>
+
+      <div class="data">
+        <p>We have eventually revamped GitSearch and rolled out update version 1.0.2, Our revamp may glitch as were still working on some core features.<a href="#"> Read more...</a></p>
+      </div>
+
+      <div class="buttons">
+        <button class="button" id="acceptBtn">Okay</button>
+        <button class="button" id="declineBtn">Close</button>
+      </div>
+    </div>
+  </body>
+</html>
+
+
   
 
   
