--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   
 <html>
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3532601954669872"
+     crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
@@ -159,6 +161,7 @@ function closeNav() {
     </div>
   </body>
 </html>
+
 
 
   
