--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   
 <html>
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3532601954669872"
-     crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-3532601954669872">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
