--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <link rel="icon" type="image/x-icon" href="serii.ico">
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
 <html lang="en" dir="ltr">
   <body bgcolor="white" >
     
@@ -79,7 +80,7 @@ body {
 </div>
 
 <div id="main">
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()"><i class='bx bx-dots-horizontal-rounded'></i>;</span>
 </div>
 
 <script>
