--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
 </div>
 
 <div id="main">
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()"><i class='bx bx-dots-horizontal-rounded'></i>;</span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()"><i class='bx bx-dots-horizontal-rounded'></i></span>
 </div>
 
 <script>
