--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ function closeNav() {
     <div class="wrapper">
       <header>
         <i class='bx bxl-gitlab'></i>
-        <h2>Beta Reavamp</h2>
+        <h2>Beta Revamp</h2>
       </header>
 
       <div class="data">
-        <p>We have eventually revamped GitSearch and rolled out update version 1.0.2, Our revamp may glitch as were still working on some core features.<a href="#"> Read more...</a></p>
+        <p>We have eventually revamped GitSearch and rolled out update version 1.0.2 Beta, Our revamp may glitch as were still working on some core features.<a href="gitsearchr.github.io/ver.html"> Read more...</a></p>
       </div>
 
       <div class="buttons">
