--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function closeNav() {
       </header>
 
       <div class="data">
-        <p>We have eventually revamped GitSearch and rolled out update version 1.0.2 Beta, Our revamp may glitch as were still working on some core features.<a href="gitsearchr.github.io/ver.html"> Read more...</a></p>
+        <p>We have eventually revamped GitSearch and rolled out update version 1.0.2 Beta, Our revamp may glitch as were still working on some core features.<a href="ver.html"> Read more...</a></p>
       </div>
 
       <div class="buttons">
