--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function closeNav() {
   <title>GitSearch</title>
 <center>
 <div class="logo2" dir="ltr">
-<img src="beta.png" 
+<img src="core.png" 
      width="505" 
      height="260" />
     
