--- a/gitcompile.html
+++ b/gitcompile.html
@@ -168,7 +168,7 @@
                     <a class="item" target="_blank" href="mailto:ryanshansingh@gmail.com"><i
                             class="paper plane icon"></i>
                         Contact the author</a>
-                    <a class="item" target="_blank" href="https://hermanz.dosilovic.com"><i class="user icon"></i> About
+                    <a class="item" target="_blank" href="https://github.com/gitsearchr"><i class="user icon"></i> About
                         the
                         author</a>
                     <div class="divider"></div>
