--- a/gitcompile.html
+++ b/gitcompile.html
@@ -45,9 +45,9 @@
 
     <link type="text/css" rel="stylesheet" href="css/ide.css">
 
-    <title>Judge0 IDE - Free and open-source online code editor</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>GitCompile</title>
+    <link rel="shortcut icon" href="gcfav.ico" type="image/x-icon">
+    <link rel="icon" href="gcfav.ico" type="image/x-icon">
 </head>
 
 <body>
