--- a/gitcompile.html
+++ b/gitcompile.html
@@ -46,8 +46,8 @@
     <link type="text/css" rel="stylesheet" href="css/ide.css">
 
     <title>GitCompile</title>
-    <link rel="shortcut icon" href="gcfav.ico" type="image/x-icon">
-    <link rel="icon" href="gcfav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="myfav.ico" type="image/x-icon">
+    <link rel="icon" href="myfav.ico" type="image/x-icon">
 </head>
 
 <body>
