--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ body {
   <a href="#">Donate</a>
   <a href="j.html">GitTasks</a>
   <a href="word.html">GitWord</a>
+  <a href="gitcompile.html">GitCompile</a>
   <a href="tc.html">Terms & Conditions</a>
   <a href="set.html">Set GitSearch as Default</a>
   <a href="ver.html">Version</a>
